[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Netherlands eScience Center (Ole Mussmann)", email = "o.mussmann@esciencecenter.nl"},
]
dependencies = [
    "scattertext>=0.1.19",
    "jupyterlab>=4.0.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

